x.x.x xxxx-xx-xx
UI: Allow to mute accounts
UI: Show counter for new messages in other accounts
UI: Remove setting for notification aggregation.
Other: Limit detailed notifications to 9 per account, use summary if beyond.
Other: Move notification code into separate class


1.4.0 2024-03-06
UI: Reactions (send and display)
UI: Show progress bar while adding account as second device
UI: Enable swipe actions for informational messages
UI: Move "cancel" action in headers to the left (away from "ok" action)
UI: Refactor "Add Chat" page for alignment with DC Android
UI: Don't show additional summarytext for messages with attached file
UI: Don't show email address of own account in chatlist page header
UI: Move "pinned" icon to the right side of the date
UI: Slightly enlarge clickbox + icon for password hidden/clear view toggle
UI: Add button to jump to top in chat list
UI: Option to show contact requests in account switcher
UI: Images now auto-rotate according to EXIF data
Bugfix: Copy to clipboard now reliable
Bugfix: Adapt size of chatlist in the archive
Bugfix: When adding new contact, button to scan QR code now works on phone as well as on desktop
Bugfix: Under certain circumstances, a popup regarding account en- or decryption appeared on each startup
Other: Use deltachat-core-rust v1.136.1
Other: Refactoring for app to be more responsive when receiving a lot of messages
Other: Don't restart IO when switching accounts
Other: Build lib deltachat-core-rust out of tree
Other: Add file im/export via FileDialog for non-Ubuntu Touch platforms

1.3.1 2023-12-16
UI: Click on header in chat view opens chat partner's profile (1:1 chats) or group edit page
UI: Show new message count in accounts overview
UI: Show state of outgoing message in chatlist (pending, sent or read)
UI: Add log viewer page
Bugfix: Corrected file/audio attachment preview area
Bugfix: Remove delay in loading of translations
Other: Redirect logs to file in app cache dir (deleted upon app closure)